# python-uv-template

./: .ai-policy.json  .aiexclude  .gitignore  README.md  pyproject.toml
.agents/: skills.json
.agents/skills/: .gitignore  ref-agents-local-tasks  ref-agents-persona  ref-agents-security  ref-coding-patterns  ref-projects-architecture  ref-python  ref-skills-authoring  tool-maintain-skills
.claude/: .gitignore
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml
scripts/: init_project_test.py
