[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [{ name = "Name Surname", email = "email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = []

[dependency-groups]
dev = [
  "agentic-tools @ git+https://github.com/swiftpostlab/agentic-tools.git",
  "poethepoet>=0.46.0",
  "pytest>=9.1.1",
  "black>=26.5.1",
  "pyright>=1.1.411",
  "json5>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project", "scripts"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--import-mode=importlib"
testpaths = ["src", "scripts"]
python_files = ["*_test.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/__pycache__", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberAccess = "warning"
reportUnknownMemberType = "none"
reportUnknownModuleType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[project.scripts]
init-project = "scripts.init_project:main"
main = "my_project.main:main"

[tool.poe.tasks]
upgrade-agentic-tools = "uv lock --upgrade-package agentic-tools"
sync-skills = "uv run agentic-tools skills sync"
sync-ai-policy = "uv run agentic-tools policy sync"
sync-ai-policy-import-vscode = "uv run agentic-tools policy import-vscode"
policy-check = "uv run agentic-tools policy check"
lint = "python -m black --check ./src"
lint-fix = "python -m black ./src"
typecheck = "python -m pyright ./src"
test = "python -m pytest"
# --- AI Secure Parameterized Tasks ---
lint-filter = { help = "Run linter and filter output", shell = "python -m black --check ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
typecheck-filter = { help = "Run typechecker and filter output", shell = "python -m pyright ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
